Add constant-time operation verification and comprehensive testing strategy for SHA3 algorithms
This commit introduces a new constant-time operation verification step in the CI/CD pipeline to ensure resistance against timing attacks. Additionally, a detailed testing strategy document is added, outlining various test categories including KAT, basic functionality, CSHAKE, TurboSHAKE, constant-time, security, and performance tests. New tests for constant-time behavior and performance benchmarks are implemented to enhance the robustness and security of the SHA3 family algorithms.

--- a/.github/actions/test-sha3/action.yml
+++ b/.github/actions/test-sha3/action.yml
@@ -105,6 +105,15 @@ runs:
         cargo test test_sha3_implementations --features "${{ inputs.features }}"
         echo "SHA3 implementation tests completed"
     
+    - name: Constant-time operation verification
+      shell: bash
+      run: |
+        echo "Verifying constant-time operations..."
+        cd ${{ inputs.working-directory }}
+        # Run specific tests that verify constant-time behavior
+        cargo test --test constant_time --features "${{ inputs.features }}"
+        echo "Constant-time verification completed"
+    
     - name: Test Keccak implementations
       shell: bash
       run: |
