--- a/lib-q-k12/Cargo.toml
+++ b/lib-q-k12/Cargo.toml
@@ -19,6 +19,10 @@ lib-q-sha3 = { version = "0.0.1", path = "../lib-q-sha3", default-features = fal
 [dev-dependencies]
 digest = { version = "0.11.0-rc.0", features = ["alloc", "dev"] }
 hex-literal = "1.0.0"
+rand = "0.9.2"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
+hex = "0.4.3"
 
 [features]
 default = ["alloc"]
