--- a/.github/actions/crate-publish/action.yml
+++ b/.github/actions/crate-publish/action.yml
@@ -20,7 +20,7 @@ runs:
   using: composite
   steps:
     - name: Setup Rust toolchain
-      uses: dtolnay/rust-toolchain@v1.75.0
+      uses: dtolnay/rust-toolchain@master
       with:
         toolchain: stable
     
