--- a/.github/actions/rust-test/action.yml
+++ b/.github/actions/rust-test/action.yml
@@ -34,7 +34,7 @@ runs:
   using: composite
   steps:
     - name: Setup Rust toolchain
-      uses: dtolnay/rust-toolchain@v1.75.0
+      uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{ inputs.rust-version }}
         components: rustfmt, clippy
