--- a/.github/actions/wasm-build/action.yml
+++ b/.github/actions/wasm-build/action.yml
@@ -30,7 +30,7 @@ runs:
   using: composite
   steps:
     - name: Setup Rust toolchain
-      uses: dtolnay/rust-toolchain@v1.75.0
+      uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{ inputs.rust-version }}
         components: rustfmt, clippy
