--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -232,7 +232,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Verify published Rust crate
         run: |
