--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,7 +133,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Add target
         run: rustup target add ${{ matrix.target }}
@@ -165,7 +167,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -191,7 +195,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -313,7 +319,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -352,7 +360,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Install valgrind
         run: |
