--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -97,7 +97,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -143,7 +145,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Check documentation completeness
         run: |
