--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -51,7 +51,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Run cryptographic tests
         run: |
@@ -92,7 +94,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Install valgrind
         run: |
@@ -131,7 +135,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Run memory safety validation
         uses: ./.github/actions/rust-build
@@ -155,7 +161,9 @@ jobs:
       - uses: actions/checkout@v5
       
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
       
       - name: Run dependency security audit
         uses: ./.github/actions/rust-build
