Update actions and security ci

--- a/.github/actions/rust-build/action.yml
+++ b/.github/actions/rust-build/action.yml
@@ -68,6 +68,7 @@ runs:
       run: |
         echo "Running security audit..."
         cd ${{ inputs.working-directory }}
+        cargo install cargo-audit --locked
         cargo audit --deny warnings
         echo "Security audit completed successfully"
     
