--- a/.github/actions/test-keccak/action.yml
+++ b/.github/actions/test-keccak/action.yml
@@ -47,6 +47,7 @@ runs:
       run: |
         echo "Running security audit for Keccak..."
         cd ${{ inputs.working-directory }}
+        cargo install cargo-audit --locked
         cargo audit --deny warnings
         echo "Security audit completed successfully"
     
