--- a/.github/actions/test-lib-q-sponge/action.yml
+++ b/.github/actions/test-lib-q-sponge/action.yml
@@ -43,6 +43,7 @@ runs:
       run: |
         echo "Running security audit for lib-q-sponge..."
         cd ${{ inputs.working-directory }}
+        cargo install cargo-audit --locked
         cargo audit --deny warnings
         echo "Security audit completed successfully"
     
