Fix CI constant-time tests by specifying package names
- Updated CI workflow to run constant-time tests for each package individually
- Added -p flag to specify lib-q-sha3, lib-q-ascon, and lib-q-k12 packages
- Fixes 'no test target named constant_time' error in CI pipeline
- All constant-time tests now run successfully from workspace root

--- a/.github/actions/test-ascon/action.yml
+++ b/.github/actions/test-ascon/action.yml
@@ -17,6 +17,10 @@ inputs:
     description: Whether to run benchmarks (requires nightly)
     default: "false"
     required: false
+  test-algorithms:
+    description: Specific algorithms to test
+    default: ""
+    required: false
 
 runs:
   using: composite
