Fix WASM binding compilation errors in lib-q-core
- Add #[wasm_bindgen] attribute to impl blocks for proper WASM binding
- Fix constructor functions to use concrete types instead of Self
- Resolve duplicate definition errors for constructor functions
- Fix self argument errors in WASM getter methods
- All WASM compilation now works correctly for both native and WASM targets
- Tests pass and functionality is preserved

--- a/.github/actions/test-ascon/action.yml
+++ b/.github/actions/test-ascon/action.yml
@@ -46,9 +46,8 @@ runs:
       shell: bash
       run: |
         echo "Running security audit for Ascon..."
-        cd ${{ inputs.working-directory }}
         cargo install cargo-audit --locked
-        cargo audit --deny warnings
+        cargo audit --deny warnings lib-q-ascon
         echo "Security audit completed successfully"
     
     - name: Check formatting
