--- a/.github/actions/test-sha3/action.yml
+++ b/.github/actions/test-sha3/action.yml
@@ -42,9 +42,8 @@ runs:
       shell: bash
       run: |
         echo "Running security audit for SHA3..."
-        cd ${{ inputs.working-directory }}
         cargo install cargo-audit --locked
-        cargo audit --deny warnings
+        cargo audit --deny warnings lib-q-sha3
         echo "Security audit completed successfully"
     
     - name: Check formatting
