--- a/lib-q-kem/Cargo.toml
+++ b/lib-q-kem/Cargo.toml
@@ -29,6 +29,7 @@ rand = "0.9.2"
 
 [features]
 default = []
+std = [] # Compatibility feature for CI/testing
 # Enable ml-kem (FIPS 203 standard) with modern dependencies
 ml-kem = [
     "dep:lib-q-ml-kem",
