Fix cargo audit subcommand errors in CI test actions
- Remove incorrect package name subcommands from cargo audit calls
- cargo audit doesn't accept package names as subcommands
- Use 'cargo audit --deny warnings' to scan the entire workspace
- Fixed test-keccak, test-sha3, test-k12, test-ascon, and test-lib-q-sponge actions
- All security audit steps now run from workspace root as intended
- Resolves 'unrecognized subcommand' errors in CI pipeline

--- a/.github/actions/test-k12/action.yml
+++ b/.github/actions/test-k12/action.yml
@@ -47,7 +47,7 @@ runs:
       run: |
         echo "Running security audit for K12..."
         cargo install cargo-audit --locked
-        cargo audit --deny warnings lib-q-hash
+        cargo audit --deny warnings
         echo "Security audit completed successfully"
     
     - name: Check formatting
