--- a/.github/actions/test-sha3/action.yml
+++ b/.github/actions/test-sha3/action.yml
@@ -43,7 +43,7 @@ runs:
       run: |
         echo "Running security audit for SHA3..."
         cargo install cargo-audit --locked
-        cargo audit --deny warnings lib-q-sha3
+        cargo audit --deny warnings
         echo "Security audit completed successfully"
     
     - name: Check formatting
