Add panic abort configuration and enable std feature in Cargo.toml files
- Set panic strategy to "abort" in the main Cargo.toml
- Introduce std feature in lib-q-ascon with default support
- Update lib-q-hpke to require alloc feature and adjust imports accordingly
- Implement panic handler for no_std environments in lib-q-ascon

--- a/lib-q-hpke/Cargo.toml
+++ b/lib-q-hpke/Cargo.toml
@@ -16,6 +16,7 @@ categories = ["cryptography"]
 name = "lib_q_hpke"
 path = "src/lib.rs"
 crate-type = ["cdylib", "rlib"]
+required-features = ["alloc"]
 
 [dependencies]
 lib-q-core = { path = "../lib-q-core", default-features = false }
