--- a/lib-q-ascon/Cargo.toml
+++ b/lib-q-ascon/Cargo.toml
@@ -26,6 +26,8 @@ criterion = { version = "0.7.0", features = ["html_reports"] }
 rand = "0.9.2"
 
 [features]
+default = ["std"]
+std = [] # Enable std library support
 no_unroll = [] # Do not unroll loops for binary size reduction
 nightly = [] # Enable nightly-only features like benchmarking
 
