Update dependencies and enhance WASM support in lib-q-core and lib-q-keccak
- Added `core_affinity`, `serde-wasm-bindgen`, and `serde_json` dependencies to improve performance and serialization in WASM.
- Updated `Cargo.toml` to include new dependencies and features for better multithreading and SIMD support.
- Enhanced WASM API in `lib-q-core` to support key generation and encapsulation with improved error handling.
- Implemented thread affinity strategies in `lib-q-keccak` for optimized cache performance during multithreading operations.
- Refactored SIMD processing for security and performance, ensuring constant-time operations and input validation.
- Updated examples and tests to reflect new functionality and ensure correctness.

--- a/lib-q-core/Cargo.toml
+++ b/lib-q-core/Cargo.toml
@@ -32,6 +32,8 @@ serde = { version = "1.0.219", optional = true, features = ["derive"], default-f
 # WASM bindings
 wasm-bindgen = { version = "0.2.100", optional = true, features = ["serde-serialize"] }
 js-sys = { version = "0.3.77", optional = true }
+serde-wasm-bindgen = { version = "0.6.5", optional = true }
+serde_json = { version = "1.0.143", optional = true }
 
 # Lazy static for global registry
 lazy_static = "1.5.0"
@@ -56,7 +58,7 @@ hash = ["dep:lib-q-sha3"]
 serde = ["dep:serde"]
 
 # WASM support
-wasm = ["wasm-bindgen", "js-sys", "serde"]
+wasm = ["wasm-bindgen", "js-sys", "serde", "serde-wasm-bindgen", "serde_json"]
 
 [lib]
 name = "lib_q_core"
@@ -66,6 +68,10 @@ crate-type = ["cdylib", "rlib"]
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
+
+[package.metadata.wasm-pack.profile.release]
+# Enable bulk memory operations to fix wasm-validator errors
+wasm-opt = ["-O", "--enable-bulk-memory"]
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
