--- a/lib-q-keccak/Cargo.toml
+++ b/lib-q-keccak/Cargo.toml
@@ -23,6 +23,7 @@ no_unroll = [] # Do no unroll loops for binary size reduction
 simd = []      # Use core::simd (nightly-only)
 nightly = []   # Enable nightly-only features like benchmarking
 advanced-simd = ["simd"]  # Enable advanced SIMD features (requires nightly)
+arm64_sha3 = [] # Enable ARM64 SHA3 hardware acceleration (requires native ARM64 build)
 std = ["cpufeatures", "num_cpus", "nix"]  # Enable std support (required for multi-threading)
 multithreading = ["std", "thread-affinity", "simd"]  # Enable multi-threading support with thread affinity
 thread-affinity = ["dep:core_affinity"]  # Enable thread affinity support
