--- a/lib-q-keccak/Cargo.toml
+++ b/lib-q-keccak/Cargo.toml
@@ -28,7 +28,7 @@ std = ["cpufeatures", "num_cpus", "nix"]  # Enable std support (required for mul
 multithreading = ["std", "thread-affinity", "simd"]  # Enable multi-threading support with thread affinity
 thread-affinity = ["dep:core_affinity"]  # Enable thread affinity support
 
-[target.'cfg(target_arch = "aarch64")'.dependencies]
+[target.'cfg(all(target_arch = "aarch64", not(target_os = "macos")))'.dependencies]
 cpufeatures = { version = "0.2.17", optional = true }
 
 [dependencies]
@@ -50,6 +50,24 @@ crate-type = ["cdylib", "rlib"]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
+# Cross-compilation configuration
+[target.aarch64-unknown-linux-gnu]
+linker = "aarch64-linux-gnu-gcc"
+# Disable problematic features during cross-compilation
+rustflags = ["--cfg", "cross_compile"]
+
+[target.aarch64-unknown-linux-musl]
+linker = "aarch64-linux-musl-gcc"
+rustflags = ["--cfg", "cross_compile"]
+
+# Additional cross-compilation targets
+[target.armv7-unknown-linux-gnueabihf]
+linker = "arm-linux-gnueabihf-gcc"
+rustflags = ["--cfg", "cross_compile"]
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = ["--cfg", "cross_compile"]
+
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
     'cfg(hax)',
@@ -59,4 +77,5 @@ unexpected_cfgs = { level = "warn", check-cfg = [
     'cfg(simd256)',
     'cfg(aarch64)',
     'cfg(x86_64)',
+    'cfg(cross_compile)',
 ] }
