--- a/lib-q-keccak/Cargo.toml
+++ b/lib-q-keccak/Cargo.toml
@@ -20,11 +20,12 @@ rust-version = "1.89"
 default = ["std"]
 asm = []       # Use optimized assembly when available (ARMv8, x86_64 AVX2/AVX-512)
 no_unroll = [] # Do no unroll loops for binary size reduction
-simd = []      # Use core::simd (nightly-only)
+simd = ["alloc"]      # Use core::simd (nightly-only) - requires alloc
 nightly = []   # Enable nightly-only features like benchmarking
 advanced-simd = ["simd"]  # Enable advanced SIMD features (requires nightly)
 arm64_sha3 = [] # Enable ARM64 SHA3 hardware acceleration (requires native ARM64 build)
-std = ["cpufeatures", "num_cpus", "nix"]  # Enable std support (required for multi-threading)
+alloc = ["spin"]     # Enable alloc support for no_std environments
+std = ["alloc", "cpufeatures", "num_cpus", "nix"]  # Enable std support (required for multi-threading)
 multithreading = ["std", "thread-affinity", "simd"]  # Enable multi-threading support with thread affinity
 thread-affinity = ["dep:core_affinity"]  # Enable thread affinity support
 
@@ -40,6 +41,9 @@ nix = { version = "0.30.1", optional = true, features = ["sched", "process"] }
 # Thread affinity support - cross-platform
 [target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
 core_affinity = { version = "0.8.3", optional = true }
+
+# Global allocator for no_std builds - using a simpler approach
+spin = { version = "0.9.8", optional = true }
 
 [lib]
 name = "lib_q_keccak"
