--- a/lib-q-core/Cargo.toml
+++ b/lib-q-core/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["cryptography", "wasm"]
 
 [dependencies]
 # Core cryptographic dependencies - no_std compatible
-getrandom = { version = "0.3.3", features = ["wasm_js"], optional = true, default-features = false }
+getrandom = { version = "0.3.3", optional = true, default-features = false }
 rand_core = { version = "0.9.3", default-features = false, features = ["os_rng"] }
 rand = { version = "0.9.2", default-features = false, features = ["thread_rng"], optional = true }
 
